// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Client.discussions addCategory 1`] = `
{
  "agent": "discussions",
  "args": [
    0,
    "ipfs://bafkreig6w7uziilucxw7vfs63jnavri4cdfl7b7r3k4fafloibxtsftnny",
    "0xa89aa3531b4c7b310064610ce4530d0a1aecf80f5b1c97b2c65a81883c4e5b6f049320ac641d9133ed00ad818184cbcce6db88989cc9553f2bf0b446fa92e3911c",
  ],
  "method": "add_category",
}
`;

exports[`Client.discussions editCategory 1`] = `
{
  "agent": "discussions",
  "args": [
    1,
    "ipfs://bafkreig5a634jxenylwhpknv5ccwqotdzmhgbqieyglbdyxffcbgog6xza",
    "0xc080db2b51cd722462e19275166e2408456eab1d475036202bda682fbebc2fba4c89b85aad101e54aae9a0682c97321d83159d47ba674a947b2e4db6d5322ff11c",
  ],
  "method": "edit_category",
}
`;

exports[`Client.discussions removeCategory 1`] = `
{
  "agent": "discussions",
  "args": [
    1,
    "0x64a18b37845ec92955c208c764b111e8636947876b11d09000311252f6dfd4a61b85938472509c41f3412f6623767c0383741227fccd4cf8067a09852355e3441b",
  ],
  "method": "remove_category",
}
`;

exports[`Client.discussions addTopic 1`] = `
{
  "agent": "discussions",
  "args": [
    "0xd96d9e15F6fb8f493784640f1009FbB1C4f1D2D1",
    0,
    0,
    "ipfs://bafkreihrrkavdwctri5nutfji3g52ksiq2uubnrflihdpyavzzkvmiebg4",
    "0x02a5252cf69f7160d52d02918fcd439d656b4e59c1fd8a0f8739accde839bd7a4b5c7c2d1d3b5b1f6e2d70820bdd7ce7dc03f82dda066345d7612d97248647991c",
  ],
  "method": "add_topic",
}
`;

exports[`Client.discussions editTopic 1`] = `
{
  "agent": "discussions",
  "args": [
    1,
    "ipfs://bafkreian3o5sqrxmynunhsfqugwyezlzkkdk7cr2nj3h2a5lm5msfwvbzi",
    "0x8eabb4d88e759d3dd246325a6ed95d80902f46ddbedf538f2fbc45b98415b956006016f16bca634807b2f4133e34c2db533e8fedfe8f8090bcc9fbb6f91233ef1b",
  ],
  "method": "edit_topic",
}
`;

exports[`Client.discussions pinTopic 1`] = `
{
  "agent": "discussions",
  "args": [
    1,
    "0x20507262885f6a9f86a1456e1550db90eca63f1d9391b33f0ba84be08124bf536982c475c19b58fe8b2e1a4e009b5d58d11d1d91ce4ddda930ee41fb9d0439071c",
  ],
  "method": "pin_topic",
}
`;

exports[`Client.discussions unpinTopic 1`] = `
{
  "agent": "discussions",
  "args": [
    1,
    "0xb6d8a7e495ac2f705cad76faa421683b234f1a2815253f872947475fa9745b5f69470e3d97f7cee6ebb87f0e6dffa97eed587e9c7bd31313734b13a744466ecf1c",
  ],
  "method": "unpin_topic",
}
`;

exports[`Client.discussions vote 1`] = `
{
  "agent": "discussions",
  "args": [
    "0xd96d9e15F6fb8f493784640f1009FbB1C4f1D2D1",
    1,
    1,
    "0x66af0b73ba17fbdcc94df74147f21b6e14c7f0df28224c4a1a4a29984403b400249644919f577538144c6eea48d147f066f46362c1c53bc2f9f3fe28311c6bc01c",
  ],
  "method": "vote",
}
`;

exports[`Client.discussions unvote 1`] = `
{
  "agent": "discussions",
  "args": [
    "0xd96d9e15F6fb8f493784640f1009FbB1C4f1D2D1",
    1,
    "0x30051a708d828432304799843dd9b44abc1d4bd0a967160d6160a21a673132f44805fffdff31cf2f467c80f309428c4c3692312321dfff7e90d39099f6febe381c",
  ],
  "method": "unvote",
}
`;

exports[`Client.discussions removeTopic 1`] = `
{
  "agent": "discussions",
  "args": [
    1,
    "0x535060f92fa4ec30628ddb9738b566c5bff7064ee00a3ab9217d5dfe0258d3bb76c9537b941af9b3e15e50cf3b9cd2480faa6281c859125d615c03b93c24fbba1c",
  ],
  "method": "remove_topic",
}
`;
